@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-18T08:19:10Z",
+  "timestamp" : "2022-05-18T16:23:08Z",
   "count_outdated" : 264,
   "uniques_outdated" : 142,
-  "count" : 304,
+  "count" : 305,
   "uniques" : 168,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-05-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
