@@ -1,5 +1,5 @@
 {
-  "count": 40,
+  "count": 41,
   "uniques": 13,
   "clones": [
     {
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2022-05-18T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
