@@ -1,3 +1,10 @@
+2022-05-18T16:23:08Z:
+* notice: last 14d: unq all: 13 41
+* notice: prev accum: outdated-unq outdated-all / unq all: 142 264 / 168 304
+* notice: next accum: outdated-unq outdated-all / unq all: 142 264 / 168 305
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: changed dates: [2022-05-18]
+
 2022-05-18T08:19:10Z:
 * notice: last 14d: all unq: 40 13
 * notice: prev accum: outdated-all outdated-unq / all unq: 264 142 / 303 167
